extends Control

func _on_play_b_pressed() -> void:
	pass # Replace with function body.


func _on_settings_b_pressed() -> void:
	pass # Replace with function body.
	#get_tree().change_scene_to_file("insert file link to scene")

func _on_credits_b_pressed() -> void:
	pass # Replace with function body.


func _on_quit_b_pressed() -> void:
	get_tree().quit()
